# exclusive

./: .pylintrc  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint-test-cover-docs.yml
docs/: conf.py  toc.rst
docs/_source/: exclusive.rst
exclusive/: exclusive.py
src/exclusive/: __init__.py  exclusive.py
